<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello">Hello World, IamHomeTest02!</string>
	<string name="app_name">IamHome.</string>

	<string name="bt_pickAddress">Pick Address</string>
	<string name="bt_Start">Start</string>
	<string name="bt_End">End</string>
	<string name="bt_FindDestination">Find destination</string>
	<string name="bt_Map">Check destination with GoogleMap</string>
	<string name="bt_NextPage">"Next page"</string>
	<string name="bt_PreviousPage">Previous page</string>
	
	<string name="menu_distance">Remaining distance</string>
	
	<string name="toast_address">Address: </string>
	<string name="toast_setDestination">Destination has been set.</string>
	<string name="toast_isRunning">Iamhome is already running.</string>
	<string name="toast_isRunning_preference">Settings values will be applied at next launching.</string>
	<string name="toast_startservice">You need to go home right now.</string>
	<string name="toast_unsupport_Wifi">"Can't connect Wifi currently.\n Using data network may be charged lots of coats."</string>
	<string name="toast_unsupport_Connectivity">Please make enable Wifi or data network.</string>
	<string name="toast_unsupport_GPS">Please make enable GPS.</string>
	<string name="toast_distance">Distance to destination : </string>
	<string name="toast_reset_destination">Please set your destination again.</string>
	<string name="toast_notfound_destination_position">Cannot find destination position.\nPlease try again.</string>
	<string name="toast_notfound_current_position">Cannot find current position.</string>
	<string name="toast_poor_network">Poor network condition.\nPlease try again later.</string>
	<string name="toast_restart">IamHome is closed abnormally. Restart application now.</string>
	<string name="toast_crash">IamHome is closed abnormally. Report errors now.</string>
	<string name="toast_pref_isRunning">It will be set from next launching if you change values</string>
	
	<string name="msg_default">From Iamhome\n</string>
	
	<string name="InputDestinationAddress">Find a destination with address</string>
	<string name="InputPhoneNumber">Please input phone number to call back</string>
	<string name="InputSMS">Please set a message</string>

	<string name="noti_success_name">Successful!</string>
	<string name="noti_success_msg">Completed sending a message.</string>
	
	<string name="noti_disablegps_name">Disabled GPS!</string>
	<string name="noti_disablegps_msg">Cannot catch a signal for GPS</string>
	
	<string name="noti_forceclose_name">Force closed by user</string>
	<string name="noti_forceclose_msg">IamHome is force closed by the user</string>	
	
	<string name="CurrentLocation">Where are you now?</string>
	<string name="MessageSMS">Successfully sent</string>	
	
	<string name="DialogTitle">Destination address?</string>
	
	<string name="Yes">Yes</string>
	<string name="No">No</string>
	
	<string name="Latitude">Latitude</string>
	<string name="Longitude">Longitude</string>
	<string name="FoundAddress">Found Address</string>
	
	<string name="text_notrunning_custom_activiy">Please make sure your destination.
	Marker will be placed at searched address.
	Please make long tap at your correct destination.</string>
	<string name="text_running_custom_activiy">Check your current location on map\n
	The current position on map may not accurate.\n
	Tip: Press a menu key to check a distance to destination"</string>
	
	<string name="dialog_loading">"Please wait while finding location"</string>
	<string name="ConfirmMsg">"Are you sure to set here as destination address?"</string>
	
	<string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_feature1">I am home</string>
    <string name="title_feature2">I am done</string>
    <string name="title_feature3">Where am I?</string>
    <string name="title_feature4">My profile</string>
    <string name="title_feature5">Settings</string>
    <string name="title_feature6">Feature 6</string>
    <string name="title_selectContacts">Select Contact</string>
    
    <string name="pref_Title_minFrequency">Set Minimum Frequency</string>
    <string name="pref_Sum_minFrequency">How often to update location</string>
    <string name="pref_TItle_minDistance">Set Minimum Distance</string>
    <string name="pref_Sum_minDistance">Minimum distance to destination from user</string>
    <string name="pref_Title_enableDialog">Show a dialog on a map</string>
    <string name="pref_Sum_enableDialog">Do you want to see a dialog on a map every time?</string>
    
    <string name="about_dashboard">The aim of this application is to protect your lovely people.\n
    1. I am Home.\n
    You can check your couple going home safely. You can also check son and daughter to go school safely.\n
    Send a text message to designated phone number automatically when reaching the destination with selected minimum distance.
    2. Settings.\n
    You can set the minimum distance from the destination and the minimum frequency to update GPS.\n\n\n
    Please tap below advertisement for better application.
    </string>
    <string name="about_homein">I am Home.\nSet your destination, a message what you want to send and a person who will get your message.</string>
    <string name="about_map">Minimum distance to destination from user</string>
    <string name="about_homeout">Minimum distance to destination from user</string>
    <string name="about_profile">Minimum distance to destination from user</string>
    <string name="about_settings">You can set default setting values.\n
  Minimum frequency GPS - How often do you want to update GPS?\n
  Minimum distance from destination - This application will be closed finally according to this minimum value.</string>
     
    <string name="profile_name">Your name: </string>
    <string name="profile_phoneNum">Your phone number: </string>
    <string name="profile_address">Your address: </string>
    <string name="profile_default_name">Please set your name</string>
    <string name="profile_default_address">Please set your address</string>
    
    <string name="overlay_destination_title">Destination</string>
    <string name="overlay_current_title">Current position</string>        
</resources>
