<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Location Update Frequency" android:key="locupdate">
    	<ListPreference
    		android:title="@string/pref_Title_minFrequency"
    		android:summary="@string/pref_Sum_minFrequency"
    		android:key="MINIMUN_FREQUENCY"
    		android:defaultValue="1"
    		android:entries="@array/minTimeIncs"
    		android:entryValues="@array/minTimeVals" />
    	<ListPreference
    		android:title="@string/pref_TItle_minDistance"
    		android:summary="@string/pref_Sum_minDistance"
    		android:key="MINIMUN_DISTANCE"
    		android:defaultValue="25"
    		android:entries="@array/minDistance"
    		android:entryValues="@array/minDistanceVals"/>
    	<CheckBoxPreference
    		android:title="@string/pref_Title_enableDialog"
    		android:summary="@string/pref_Sum_enableDialog"
    		android:key="SHOW_DIALOG"
    		android:defaultValue="true"/>
    </PreferenceCategory>   
</PreferenceScreen>
