<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" 
  android:orientation="vertical">
  <TextView 
	android:id="@+id/CurrentLoacation" 
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content" 
	android:text="@string/InputDestinationAddress"/>
  <LinearLayout
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal">
	<EditText  
		android:id="@+id/DestinationAddress" 
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent"
		android:layout_weight="3"></EditText>
		<!-- android:text="@string/bt_FindDestination" -->
	<ImageButton 
		android:id="@+id/bt_GeocodingButton" 
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content"
		android:src="@drawable/ic_btn_search"
		android:layout_weight="1"></ImageButton>
  </LinearLayout>
  <TextView 
	android:id="@+id/GeocodedLoacation" 
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content"/>
	<TextView 
		android:text="@string/InputPhoneNumber" 
		android:id="@+id/InputPhoneNumber" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"></TextView>
	
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<EditText 
			android:id="@+id/ReceiverPhoneNumber" 
			android:layout_height="wrap_content" 
			android:inputType="phone" android:layout_width="180dip"></EditText>
		<Button 
			android:text="@string/bt_pickAddress" 
			android:id="@+id/bt_pickAddress" 
			android:layout_height="wrap_content" android:layout_width="fill_parent"></Button>
		
  </LinearLayout>
  <TextView 
		android:id="@+id/TextMessageTextView" 
		android:text="@string/InputSMS"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"></TextView>
	<EditText 
		android:id="@+id/TextMessageEditText" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"></EditText>	
	<Button 
		android:id="@+id/bt_StartService"
		android:text="@string/bt_Start"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"/>
</LinearLayout>
